--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Osaragi V1.0",
+  "name": "Osaragi",
   "version": "1.0.0",
   "description": "I Like Black Color",
   "main": "main.js",
@@ -27,10 +27,13 @@
     "fake-useragent": "^1.0.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
+    "form-data":"^4.0.0",
+    "fs":"0.0.1-security",
     "fs-extra": "^10.0.0",   
     "jimp": "^0.16.1",
     "ssh2": "^1.14.0",    
     "lodash": "^4.17.21",
+    "lowdb":"^2.1.0",
     "moment-timezone": "^0.5.34",
     "multistream": "^2.1.0",
     "node-cache": "^5.1.2",
