--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "api-dylux": "^1.8.5",
     "btch-downloader": "^2.2.9",    
     "awesome-phonenumber": "^5.10.0",
+    "async": "3.2.6",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "canvafy": "^7.2.0",
